@@ -250,7 +250,7 @@ if test "$hooks" = "networkmanager"; then
 	if test "$with_nm_dispatch" != ""; then
 		networkmanager_dispatcher_dir="$with_nm_dispatch"
 	else
-		if test -d $networkmanager_dispatcher_dir ; then
+		if test -d "$networkmanager_dispatcher_dir" ; then
 			:
 		else if test -d /etc/NetworkManager/dispatcher.d; then
 			networkmanager_dispatcher_dir="/etc/NetworkManager/dispatcher.d"
@@ -264,7 +264,7 @@ if test "$hooks" = "netconfig"; then
 	if test "$with_netconfig_dispatch" != ""; then
 		netconfig_dispatcher_dir="$with_netconfig_dispatch"
 	else
-		if test -d $netconfig_dispatcher_dir ; then
+		if test -d "$netconfig_dispatcher_dir" ; then
 			:
 		else if test -d /etc/netconfig.d; then
 			netconfig_dispatcher_dir="/etc/netconfig.d"
@@ -311,6 +311,25 @@ if test "$gui" = "gtk"; then
 	# check for missing -lgthread-2.0 in the GTK_LIBS string.
 	case "$GTK_LIBS" in *-lgthread* ) ;;
 	*) AC_CHECK_LIB(gthread-2.0, g_thread_init, [GTK_LIBS="$GTK_LIBS -lgthread-2.0"]) esac
+
+	xdg_autostart_dir="$sysconfdir/xdg/autostart"
+	AC_ARG_WITH([xdg-autostart], AC_HELP_STRING([--with-xdg-autostart],
+		[Set the GNOME autostart dir, default tests prefix/etc/xdg/autostart and /etc/xdg/autostart]),
+		, withval="")
+	with_xdg_autostart="$withval"
+	AC_SUBST(xdg_autostart_dir)
+	AC_MSG_CHECKING([for autostart dir])
+	if test "$with_xdg_autostart" != ""; then
+		xdg_autostart_dir="$with_xdg_autostart"
+	else
+		if test -d "$xdg_autostart_dir" ; then
+			:
+		else if test -d /etc/xdg/autostart; then
+			xdg_autostart_dir="/etc/xdg/autostart"
+			fi
+		fi
+	fi
+	AC_MSG_RESULT([$xdg_autostart_dir])
 fi
 
 AC_ARG_WITH([keydir], AC_HELP_STRING([--with-keydir=path],
