@@ -1,0 +1,14 @@
+[Desktop Entry]
+Type=Application
+# note this is the version of the .desktop spec this file conforms to
+Version=1.0
+Name=DNSSEC Trigger Panel
+GenericName=Network Applet
+Comment=Shows DNS state and warning dialog
+Exec=0bindir0/dnssec-trigger-panel
+Icon=0uidir0/status-icon.png
+Terminal=false
+Categories=Application;Utility;
+X-KDE-StartupNotify=false
+StartupNotify=false
+
